# DRF-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/api/: mixins.py  permissions.py  urls.py  views.py
backend/drf_tutorial/: routers.py  settings.py  urls.py
backend/products/: index.py  models.py  permissions.py  serializers.py  urls.py  validations.py  views.py
backend/products/migrations/: 0001_initial.py  0002_product_user.py  0003_product_public.py
backend/search/: client.py  urls.py  views.py
js_client/: client.js  index.html
py_client/: basic.py  create.py  destroy.py  detail.py  jwt.py  list.py  not_found.py  update.py
