[tool.poetry]
name = "drf-tutorial"
version = "0.1.0"
description = ""
authors = ["Lukáš Kožušník <lukinkozusnik@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
django-cors-headers = "^4.7.0"
python-dotenv = "^1.0.1"
django-environ = "^0.12.0"
algoliasearch-django = ">=4.0,<5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
